# chalybs

./: .gitignore  C2_NUMA_DERIVATION.md  CHALYBS_EXECUTION_AND_ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  HALO_RENDERING_BUG_REFERENCE.md  LICENSE  MODE_CAPABILITY_ARCHITECTURE.md  PIPELINE_OVERVIEW.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.3.0-baseline.md  ROADMAP.md  chalybs_static_analysis.md  docs_architecture.md  docs_pipeline.md
cli/: Cargo.toml
cli/src/: main.rs
config/: chalybs.example.toml
core/: Cargo.toml
core/src/: affinity.rs  config.rs  errors.rs  hugepages.rs  irq.rs  lib.rs  logging.rs  model.rs  pci.rs  qemu.rs  state.rs  util.rs  vfio.rs
core/src/cpu/: mod.rs
core/src/cpu/detect/: classify.rs  cpuid.rs  mod.rs  qemu_map.rs  topology.rs  validate.rs
core/src/cpuplan/: builder.rs  mod.rs  plan.rs  validate.rs
core/src/cpuset/: mod.rs  status.rs
core/src/irq/: discover.rs  mod.rs  pin.rs
core/src/peripherals/: ddc.rs  looking_glass.rs  mod.rs  spice.rs  tasmota.rs
core/src/vfio/: execute.rs  isolation.rs  mod.rs  plan.rs  verify.rs
daemon/: Cargo.toml
daemon/src/: ipc.rs  lib.rs  main.rs  server.rs  snapshot.rs  state.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  glitch.rs  logo.rs  logo_png.rs  main.rs  theme.rs  ui.rs
