[workspace]
members = [
    "core",
    "cli",
    "daemon",
    "tui",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Doghat Industries <ops@doghat.io>"]
rust-version = "1.79"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-error = "0.2"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["sched", "signal", "process", "fs"] }
procfs = "0.16"
regex = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
urlencoding = "2"
