[package]
name = "chalybs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
nix.workspace = true
procfs.workspace = true
regex.workspace = true
uuid.workspace = true
reqwest.workspace = true
urlencoding.workspace = true

# missing before — required
libc = "0.2"
