[package]
name = "chalybs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true

# EXACT feature set required by your actual codebase:
#   - mount   → for hugetlbfs mount/umount
#   - sched   → for sched_setaffinity / CpuSet
#   - process → for Pid and related process APIs
#   - signal  → for kill / Signal
#   - fs      → for stat and other fs helpers
nix = { version = "0.29", features = [
    "mount",
    "sched",
    "process",
    "signal",
    "fs"
] }

procfs.workspace = true
regex.workspace = true
uuid.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
libc = "0.2"
rumqttc = "0.25"
