[package]
name = "chalybs-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chalybsd = { path = "../daemon" }
base64 = "0.21"
viuer = "0.7"
image = "0.24"
toml = "0.8"

[features]
kitty-graphics = []
